--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "core-js": "^3.8.3",
     "vue": "^2.6.14",
-    "vue-resource": "^1.0.3"
+    "vue-resource": "^1.0.3",
+    "vue-router": "^2.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
